# muproject

./: .gitignore  CMakeLists.txt
include/: MU_3SL_interface.c  csv_file.c  csv_file.h  mu_3sl_analog_nonius_calibration.c  mu_3sl_analog_nonius_calibration.h  mu_3sl_calibration_adjustments.c  mu_3sl_calibration_adjustments.h  mu_3sl_check_error_return.c  mu_3sl_check_error_return.h  mu_3sl_mt_curve.c  mu_3sl_mt_curve.h  mu_3sl_nonius_curve.c  mu_3sl_nonius_curve.h  show_mt_curve_csv_file.py  show_nonius_curve_csv_file.py
lib/: MU_3SL_interface.lib  MU_3SL_interface_64.lib  libMU_3SL_interface.so.3
measure/: Serial Debug 2024-3-14 0342.txt
src/: calibration_offline_data_file.c  calibration_online.c
